# spring_particle_project

./: .gitignore  CMakeLists.txt  README.md  history.txt  kirjanpito.txt  native_compile.sh  plan.txt  runNative.sh
linkit_ym.txt/: linkit.txt
shaders/: default.frag  default.vert  default_notex.frag  default_notex.vert
shadersNative/: defaultPoint.frag  defaultPoint.geom  defaultPoint.vert  defaultPoint2.frag  default_notex.frag  default_notex.vert  default_verho.geom  densityFunction0.df  densityFunction1.df  densityFunction2.df  densityFunction3.df  densityFunction4.df  densityFunction5.df  densityFunction6.df  densityFunction7.df  densityFunction8.df  densityFunction9.df  jouset.comp  jousi_particle.vert  kipinat.comp  kipinat2.comp  lumi.comp  lumi.geom  lumi.vert  ruohikko.comp  triangulate.geom  triangulate.vert  tuuliVektorit.frag  tuuliVektorit.geom  tuuliVektorit.vert
src/: CMakeLists.txt  hello.cpp
src/Graphics/: camera.cpp  camera.h  manager.h  marchingCubes.cpp  marchingCubes.h  model.cpp  model.h  modelManager.cpp  modelManager.h  programstate.cpp  programstate.h  renderer.cpp  renderer.h  shader.cpp  shader.h  testData.cpp  testData.h  texture.cpp  texture.h  textureData.cpp  textureData.h  textureManager.cpp  textureManager.h  timer.cpp  timer.h  vertexAttributes.cpp  vertexAttributes.h  vertexBufferManager.cpp  vertexBufferManager.h  vertexbuffer.cpp  vertexbuffer.h  voxeldata.cpp  voxeldata.h  window.cpp  window.h
src/Physics/: ParticleGenerator.cpp  ParticleGenerator.h  ParticleSystem.cpp  ParticleSystem.h  TimeStepper.h
src/Utils/: log.cpp  log.h  misc.cpp  misc.h  myrandom.h
src/lib/soil/: libSOIL.bc
src/soil/: SOIL.c
